# Commander-s-Intent-Agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  pyproject.toml  客户快速使用指南.md
.github/workflows/: ci.yml
docs/: HANDOFF.md  QUICKSTART.md  QUICKSTART_EN.md  STATUS_MODEL.md
docs/runlogs/: M1_FOUNDATION.md  M2_CREATE_CODEX.md  M3_REVIEW_OPTIMIZE.md  V0_1_0_RELEASE.md  V0_1_1_AUDIT_FIXES.md
examples/create-regional-manager/: design.yaml  intent.yaml
factory/: errors.py  serialization.py
factory/cli/: __init__.py  __main__.py  create.py  main.py  optimize.py  review.py  verify.py
factory/contracts/: __init__.py  agent-blueprint.schema.json  commander-intent.schema.json  factory-job.schema.json  factory-manifest.schema.json  optimization-plan.schema.json  review-report.schema.json  validation.py
factory/governance/: __init__.py  evaluation-policy.yaml  gates.py  policy.py  privacy.py  production-gates.yaml  state-machine.yaml  state_machine.py
factory/interview/: __init__.py  protocol.py  questions.yaml
factory/optimization/: __init__.py  diff.py  pipeline.py  workspace.py
factory/production/: __init__.py  blueprint.py  codex.py  generator.py  jobs.py
factory/review/: __init__.py  evaluator.py  models.py  pipeline.py  report.py  snapshot.py
scripts/: build_examples.py  manage_codex_skill.py  verify_public.py
skills/commander-agent-factory/: SKILL.md
templates/agent/: ARCHITECTURE.md.tmpl  COMMANDER_INTENT.md.tmpl  README.md.tmpl  WORKFLOW.md.tmpl
templates/job/: COMMANDER_INTENT.md.tmpl  JOB.md.tmpl
tests/: conftest.py
tests/ci/: test_workflow.py
tests/cli/: test_create.py  test_main.py  (+2 more)
workshop/: .gitignore  README.md
(+55 files in other folders)
