[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "commander-intent-agent-factory"
version = "0.1.0"
description = "A commander's-intent-driven factory for creating, reviewing, and optimizing AI agents."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "jsonschema[format]>=4.21", "packaging>=24.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
commander-factory = "factory.cli.main:main"

[tool.setuptools.packages.find]
include = ["factory*"]

[tool.setuptools.package-data]
"factory.contracts" = ["*.schema.json"]
"factory.governance" = ["*.yaml"]
"factory.interview" = ["questions.yaml"]

[tool.setuptools.data-files]
"share/commander-intent-agent-factory/templates/job" = [
  "templates/job/JOB.md.tmpl",
  "templates/job/COMMANDER_INTENT.md.tmpl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
